--- a/c/style.css
+++ b/c/style.css
@@ -1,63 +1,172 @@
+/* top-level rules */
+
 * { box-sizing: border-box }
 
 html, body {
     margin: 0;
     height: 100%;
+    overflow: hidden;
+    font-family: 'Source Code Pro', monospace;
+    background-color: #F9F9F9;
 }
 
-body {
+/* utility classes */
+
+.position-relative {
   position: relative;
 }
 
-.wrapper {
-  width: 100%;
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-}
-
-.name .pure-g {
-  text-align: center;
-  font-size: 4em;
-  line-height: .85em;
-  font-weight: 600;
-  color: #888;
-  cursor: default;
-
-  /* No select */
+.noselect {
   -webkit-touch-callout: none; /* iOS Safari */
-  -webkit-user-select: none; /* Chrome/Safari/Opera */
-     -moz-user-select: none; /* Firefox */
-      -ms-user-select: none; /* Internet Explorer/Edge */
-          user-select: none; /* Non-prefixed version, currently
-                                not supported by any browser */
+    -webkit-user-select: none; /* Chrome/Safari/Opera */
+     -khtml-user-select: none; /* Konqueror */
+       -moz-user-select: none; /* Firefox */
+        -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none; /* Non-prefixed version, currently
+                                  not supported by any browser */
 }
 
-.name .pure-g [class*=pure-u] {
-  font-family: 'Source Code Pro', monospace;
+/* name + contact */
+
+.name, .contact {
+  width: 100%;
+  display: inline-block;
+  text-align: center;
+  position: absolute;
 }
 
-.name .pure-g:nth-child(5) [class*=pure-u] {
-  color: #222;
-  cursor: text;
+/* name */
 
-  /* Selecting is possible */
-  -webkit-touch-callout: text; /* iOS Safari */
-  -webkit-user-select: text; /* Chrome/Safari/Opera */
-     -moz-user-select: text; /* Firefox */
-      -ms-user-select: text; /* Internet Explorer/Edge */
-          user-select: text; /* Non-prefixed version, currently
-                                not supported by any browser */
+.name {
+  text-align: center;
+  font-size: 6.5em;
+  font-weight: 700;
+  color: #D9D9D9;
+  cursor: default;
 }
 
-.name--dev {
-  border: grey 1px solid;
+.first-name {
+  top: 0;
+  transform: translateY(-55%);
 }
 
-.name--dev .pure-g {
-  border: orange 1px solid;
+.last-name {
+  bottom: 0;
+  transform: translateY(50%);
 }
 
-.name--dev .pure-g > div {
-  border: green 1px solid;
+/* contact */
+
+.contact {
+  position: absolute;
+  top: 48%;
+  transform: translateY(-50%);
+  font-size: 1.1em;
 }
+
+.contact .container {
+  display: inline-block;
+  width: 90%;
+}
+
+.contact a {
+  display: inline-block;
+  width: 100%;
+  color: black;
+  text-decoration: none;
+  border: 2px solid transparent;
+  border-radius: 2px;
+  padding: 12px;
+}
+
+.contact a:hover,
+.contact a:focus {
+    outline: 0;
+}
+
+.contact .email:hover,
+.contact .email:focus {
+  color: rgb(242, 173, 55);
+  border-color: rgb(242, 173, 55);
+  border-color: rgba(242, 173, 55, .25);
+}
+
+.contact .twitter:hover,
+.contact .twitter:focus {
+  color: rgb(29, 161, 242);
+  border-color: rgb(29, 161, 242);
+  border-color: rgba(29, 161, 242, .25);
+}
+
+.contact .facebook:hover,
+.contact .facebook:focus {
+  color: rgb(59, 89, 152);
+  border-color: rgb(59, 89, 152);
+  border-color: rgba(59, 89, 152, .25);
+}
+
+/* media queries */
+/* breakpoints cribbed from http://purecss.io/grids */
+
+/* ≥ 640px */
+@media screen and (max-width: 40em) and (orientation: landscape) {
+  .first-name {
+    transform: translateY(-65%);
+  }
+
+  .last-name {
+    transform: translateY(60%);
+  }
+}
+
+/* ≥ 568px */
+@media screen and (min-width: 35.5em) {
+  .name {
+    font-size: 9em;
+  }
+
+  .contact .container {
+    width: 330px;
+  }
+
+  .contact a {
+    width: 33%;
+  }
+}
+
+/* ≥ 768px */
+@media screen and (min-width: 48em) {
+  .name {
+    font-size: 12em;
+  }
+
+  .contact {
+    font-size: 1.15em;
+  }
+
+  .contact .container {
+    width: 450px;
+  }
+}
+
+/* ≥ 1024px */
+@media screen and (min-width: 64em) {
+  .name {
+    font-size: 14em;
+  }
+
+  .first-name {
+    transform: translateY(-60%);
+  }
+
+  .last-name {
+    transform: translateY(55%);
+  }
+
+  .contact {
+    font-size: 1.20em;
+  }
+}
+
+/* 1280px */
+@media screen and (min-width: 80em) {}
