--- a/c/style.css
+++ b/c/style.css
@@ -1,4 +1,4 @@
-/* top-level rules */
+﻿/* top-level rules */
 
 * { box-sizing: border-box }
 
@@ -7,7 +7,7 @@ html, body {
     height: 100%;
     overflow: hidden;
     font-family: 'Source Code Pro', monospace;
-    background-color: #F9F9F9;
+    background-color: #0d333e;
 }
 
 /* utility classes */
