--- a/c/style.css
+++ b/c/style.css
@@ -7,7 +7,7 @@ html, body {
     height: 100%;
     overflow: hidden;
     font-family: 'Source Code Pro', monospace;
-    background-color: #ff7f50;
+    background-color: #0d333e;
 }
 
 /* utility classes */
