--- a/c/style.css
+++ b/c/style.css
@@ -135,7 +135,7 @@ html, body {
 
 .contact-page {
   /* THE BACKGROUND COLOR OF THE CONTACT PAGE */
-  background-color: #f88379;
+  background-color: #e27e1c;
 }
 
 /* media queries */
