--- a/c/style.css
+++ b/c/style.css
@@ -85,7 +85,7 @@ html, body {
   border: 2px solid transparent;
 
   /* THE COLOUR OF THE LINKS IN THE MIDDLE */
-  color: black;
+  color: white;
 
   /* HOW ROUNDED THE CORNERS OF THE OUTLINE RECTANGLE ARE */
   border-radius: 2px;
