--- a/c/style.css
+++ b/c/style.css
@@ -9,6 +9,9 @@ html, body {
     font-family: 'Source Code Pro', monospace;
     background-color: #FFC0B2;
     color: white;
+
+    /* THE SIZE OF THE LINKS IN THE MIDDLE */
+    font-size: 1.1em;
 }
 
 /* utility classes */
@@ -44,7 +47,7 @@ html, body {
 
 /* page name + content */
 
-.page-name, .content {
+.page-name, .content, footer {
   width: 100%;
   display: inline-block;
   text-align: center;
@@ -89,9 +92,6 @@ html, body {
   position: absolute;
   top: 48%;
   transform: translateY(-50%);
-
-  /* THE SIZE OF THE LINKS IN THE MIDDLE */
-  font-size: 1.1em;
 }
 
 .content--hover {
@@ -105,7 +105,7 @@ html, body {
   width: 90%;
 }
 
-.content a {
+.content a, footer a {
   display: inline-block;
   width: 100%;
   text-decoration: none;
@@ -151,6 +151,24 @@ html, body {
   color: rgb(59, 89, 152);
   border-color: rgb(59, 89, 152);
   border-color: rgba(59, 89, 152, .25);
+}
+
+/* back to home link */
+
+footer {
+  position: absolute;
+  top: 80%;
+  /* transform: translateY(-50%); */
+}
+
+footer a {
+  width: 33%;
+}
+
+/* THE COLOUR OF THE BACK LINK WHEN HOVERED WITH A MOUSE OR FOCUSED WITH A KEYBOARD */
+.link__back:hover,
+.link__back:focus {
+  border-color: white;
 }
 
 /* page-specific styles */
