--- a/c/style.css
+++ b/c/style.css
@@ -100,6 +100,11 @@ html, body {
   z-index: 1;
 }
 
+.content--hover p {
+  margin-top: 1.5em;
+  margin-bottom: 1.5em;
+}
+
 .content .container {
   display: inline-block;
   width: 90%;
