add first two rows of images

--- a/c/style.css
+++ b/c/style.css
@@ -88,6 +88,10 @@ html, body {
 
 /* content */
 
+.content--block {
+  margin-top: 9em;
+}
+
 .content--absolute {
   position: absolute;
   top: 48%;
