--- a/c/style.css
+++ b/c/style.css
@@ -5,7 +5,6 @@
 html, body {
     margin: 0;
     height: 100%;
-    overflow: hidden;
     font-family: 'Source Code Pro', monospace;
     background-color: #FFC0B2;
     color: white;
@@ -15,6 +14,10 @@ html, body {
 }
 
 /* utility classes */
+
+.overflow-hidden {
+  overflow: hidden;
+}
 
 .position-relative {
   position: relative;
