--- a/c/pics.css
+++ b/c/pics.css
@@ -7,7 +7,7 @@
 .subheading {
   text-align: right;
   border-bottom: 4px solid white;
-  margin-bottom: 2em;
+  margin-bottom: 3em;
 }
 
 .subheading h2 {
@@ -19,12 +19,8 @@
 /*
 Source: https://paulund.co.uk/create-polaroid-image-with-css
 */
-.pics__row {
-  margin-bottom: 2em;
-}
-
 .pics__row:last-child {
-  margin-bottom: 6em;
+  margin-bottom: 2em;
 }
 
 .pics__row div span {
@@ -48,22 +44,53 @@ Source: https://paulund.co.uk/create-polaroid-image-with-css
   top: .5em;
 }
 
-.pics__row div:nth-child(1) span {
-  margin-left: 0;
-  margin-right: 1em;
-}
-
-.pics__row div:nth-child(2) span {
+.pics__row div span {
   margin-left: .5em;
   margin-right: .5em;
-}
-
-.pics__row div:nth-child(3) span {
-  margin-left: 1em;
-  margin-right: 0;
+  margin-bottom: 3em;
 }
 
 .pics__row div span img {
   border-top: 2px solid white;
   border-bottom: 2px solid white;
+}
+
+/* SCREENS BIGGER THAN 768px (bigger than an mom's tablet) */
+/* ≥ 768px */
+@media screen and (min-width: 48em) {
+
+  .subheading {
+  margin-bottom: 2em;
+  }
+
+  .pics__row {
+    margin-bottom: 2em;
+  }
+
+  .pics__row:last-child {
+    margin-bottom: 6em;
+  }
+
+  .pics__row div span {
+    margin-bottom: 0;
+  }
+
+  .pics__row div:nth-child(1) span {
+    margin-left: 0;
+    margin-right: 1em;
+  }
+
+  .pics__row div:nth-child(2) span {
+    margin-left: .5em;
+    margin-right: .5em;
+  }
+
+  .pics__row div:nth-child(3) span {
+    margin-left: 1em;
+    margin-right: 0;
+  }
+
+  .content .container {
+    width: 45%;
+  }
 }
