funky up the words
Give the page titles a text shadow that dances around when
hovered over.

Also:
- make the page titles more visible
- make the link borders thicker
- put in some margin between link borders
- pulsing hover background for the main page hover effect

--- a/c/style.css
+++ b/c/style.css
@@ -3,23 +3,28 @@
 * { box-sizing: border-box }
 
 html, body {
-    margin: 0;
-    height: 100%;
-    font-family: 'Source Code Pro', monospace;
-	/* default */
-    background-color: lightgrey;
-    color: white;
+  margin: 0;
+  height: 100%;
+  font-family: 'Source Code Pro', monospace;
+  /* default */
+  background-color: lightgrey;
+  color: white;
+}
+
+body {
+  text-align: center;
 }
 
 p, a {
   font-size: 1.4em;
+  margin: 0;
 }
 
 a {
   display: inline-block;
   width: 100%;
   text-decoration: none;
-  border: 2px solid transparent;
+  border: 3px solid transparent;
 
   /* THE COLOUR OF THE LINKS */
   color: white;
@@ -48,10 +53,17 @@ a:focus {
   position: relative;
 }
 
+.centered {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translateX(-50%) translateY(-50%);
+}
+
 /* PULSING BACKGROUND COLOUR */
 .pulse {
-background: linear-gradient(124deg, #FF0000, #D43B1D, #E81D1D, #E8B71D, #E3E81D, #1de840);
-background-size: 1800% 1800%;
+background: linear-gradient(124deg, #FF0000, #D43B1D, #E8B71D);
+background-size: 100% 1800%;
 
 -webkit-animation: rainbow 6s ease infinite;
 animation: rainbow 6s ease infinite;
@@ -93,52 +105,55 @@ animation: rainbow 6s ease infinite;
   border: 0;
 }
 
-/* page name + content */
+/* content + footer */
 
-.page-name, .content--full-width, footer {
+.content--full-width, footer {
   width: 100%;
   display: inline-block;
-  text-align: center;
 }
 
-.page-name, [class$="--absolute"] {
+[class*="--absolute"] {
   position: absolute;
 }
 
 /* name */
-
 .page-name {
+  display: inline-block;
   z-index: 2;
-  text-align: center;
   cursor: default;
 
   /* THE SIZE OF THE BIG PAGE TITLES */
   font-size: 6.5em;
   font-weight: 700;
+  line-height: 1;
 
   /* THE COLOUR OF THE BIG PAGE TITLES */
   color: #FFFFFF;
+  /* THE COLOUR OF THE TEXT SHADOW */
+  text-shadow: .03em .03em 0 hotpink;
 }
 
 .page-name--top {
-  top: 0;
-
   /* THE AMOUNT OF THE TOP WORD TO CUT OFF */
   transform: translateY(-45%);
 }
-.page-name--top:hover {
-  border: white 2px solid;
+
+.page-name--top:hover,
+.page-name--top:hover + .page-name--bottom {
+  color: transparent;
+  text-shadow: .03em .03em 0 #FFFFFF;
+  -webkit-text-fill-color: transparent; /* Will override color (regardless of order) */
+  -webkit-text-stroke-width: 3px;
+  -webkit-text-stroke-color: hotpink;
 }
 
 .page-name--bottom {
+  position: fixed;
   bottom: 0;
 
-  /* THE AMOUNT OF THE BOTTOM WORD TO CUT OFF */
-  transform: translateY(38%);
-}
-
-.page-name:hover + .content--hover {
-  display: inherit;
+  left: 50%;
+  /* translateY: THE AMOUNT OF THE BOTTOM WORD TO CUT OFF */
+  transform: translateX(-50%) translateY(38%);
 }
 
 /* content */
@@ -148,25 +163,23 @@ animation: rainbow 6s ease infinite;
 }
 
 .content--absolute {
-  position: absolute;
-  top: 48%;
-  transform: translateY(-50%);
+  top: 0;
+  left: 0;
+  height: 100vh;
 }
 
-.content--hover {
+.content--show-on-hover {
   display: none;
   background-color: #D43B1D;
   z-index: 1;
 }
 
-.content--hover p {
-  margin-top: 50em;
-  margin-bottom: 50em;
+.page-name--top:hover ~ main .content--show-on-hover {
+  display: inherit;
 }
 
-.content .container {
-  display: inline-block;
-  width: 90%;
+.content--show-on-hover p {
+  margin: 0;
 }
 
 /* back to home link */
@@ -219,7 +232,8 @@ footer a {
   }
 
   .content a {
-    width: 33%;
+    width: 31%;
+    margin: 0 1%;
   }
 }
 
