--- a/c/portfolio.css
+++ b/c/portfolio.css
@@ -1,11 +1,11 @@
 
 html, body {
-	
+
     background-color: #0C2E38;
 }
 
 
-.pics-page .content {
+.portfolio-page .content {
   width: 80%;
   margin-left: 10%;
   margin-right: 10%;
@@ -100,5 +100,5 @@ Source: https://paulund.co.uk/create-polaroid-image-with-css
   .content .container {
     width: 45%;
   }
-  
+
 }
