stop shouting so much
It's better to write sensibly and use CSS to format text

--- a/c/style.css
+++ b/c/style.css
@@ -144,6 +144,8 @@ animation: rainbow 6s ease infinite;
   font-weight: 700;
   line-height: 1;
 
+  text-transform: uppercase;
+
   /* THE COLOUR OF THE BIG PAGE TITLES */
   color: #FFFFFF;
   /* THE COLOUR OF THE TEXT SHADOW */
