--- a/c/style.css
+++ b/c/style.css
@@ -55,7 +55,7 @@ a:focus {
 
 .centered {
   position: absolute;
-  top: 50%;
+  top: 49%;
   left: 50%;
   transform: translateX(-50%) translateY(-50%);
 }
@@ -144,7 +144,7 @@ animation: rainbow 6s ease infinite;
 
 .page-name--top {
   /* THE AMOUNT OF THE TOP WORD TO CUT OFF */
-  transform: translateY(-45%);
+  transform: translateY(-44%);
 }
 
 .page-name--top span,
@@ -153,7 +153,7 @@ animation: rainbow 6s ease infinite;
   left: 50%;
   top: 0;
   /* THE AMOUNT OF THE TOP WORD TO CUT OFF */
-  transform: translateX(-50%) translateY(-45%);
+  transform: translateX(-50%) translateY(-44%);
 }
 
 .page-name--top a {
@@ -175,7 +175,7 @@ animation: rainbow 6s ease infinite;
 
   left: 50%;
   /* translateY: THE AMOUNT OF THE BOTTOM WORD TO CUT OFF */
-  transform: translateX(-50%) translateY(38%);
+  transform: translateX(-50%) translateY(35%);
 }
 
 /* content */
@@ -204,7 +204,7 @@ animation: rainbow 6s ease infinite;
   margin: 0;
 }
 
-/* back to home link */
+/* footer link */
 
 footer {
   bottom: 0;
