--- a/c/src/test.css
+++ b/c/src/test.css
@@ -42,23 +42,22 @@ Source: https://paulund.co.uk/create-polaroid-image-with-css
   position: relative;
 }
 
-.pics__row figure figcaption {
+.pics__row figure a .caption {
   font-family: 'Source Code Pro', monospace;
   color: white;
-  font-size: .85em;
-  position: relative;
-  top: -75px;
-  margin-right: 10px;
-  padding: 10px 10px 3px;
+  font-size: 1.6em;
+  position: absolute;
+  bottom: -10px;
+  left: 0;
+  width: 70%;
+  padding: 10px;
 
-  font-size: 2.05em;
-  width: 80%;
-  float: left;
+  border: 3px solid transparent;
+}
 
-      border-top: 3px solid transparent;
-    border-right: 3px solid transparent;
-          border-left: 5px solid transparent;
-    border-bottom: 5px solid transparent;
+.pics__row figure a:hover .caption {
+  background-color: hotpink;
+  border-color: white;
 }
 
 /*.pics__row figure a:hover + figcaption {
@@ -73,16 +72,22 @@ Source: https://paulund.co.uk/create-polaroid-image-with-css
 }
 
 .pics__row figure img {
-  border-top: 3px solid white;
-  border-bottom: 3px solid white;
+/*  border-top: 3px solid white;
+  border-bottom: 3px solid white;*/
+  border: 3px solid transparent;
   position: relative;
+}
+
+.pics__row figure a:hover img {
+  border-color: white;
 }
 
 .pics__row figure a {
   position: relative;
+  border: none;
 }
 
-.pics__row figure a::after {
+.pics__row figure a .overlay {
     content:"";
     display: block;
     height: 100%;
@@ -90,25 +95,21 @@ Source: https://paulund.co.uk/create-polaroid-image-with-css
     top: 0;
     left: 0;
     width: 100%;
-    background-color: rgba(12, 46, 56, 0.25);
+    background-color: rgba(12, 46, 56, 0.45);
 }
 
-.pics__row figure a:active {
-    border: 3px solid pink;
-}
-
-.pics__row figure a:hover::after {
+.pics__row figure a:hover .overlay {
     background-color: transparent;
 }
 
-.pics__row figure a:hover + figcaption {
+/*.pics__row figure a:hover + figcaption {
     border-top: 3px solid white;
     border-right: 3px solid white;
     border-left: 5px solid rgba(12, 46, 56, 1);
     border-bottom: 5px solid rgba(12, 46, 56, 1);
 
     background-color: rgba(12, 46, 56, 0.5);
-}
+}*/
 
 /* SCREENS BIGGER THAN 568px (bigger than an iphone) */
 /* ≥ 568px */
