--- a/c/src/test.css
+++ b/c/src/test.css
@@ -37,7 +37,7 @@ Source: https://paulund.co.uk/create-polaroid-image-with-css
   background-color: transparent;
   display: inline;
   float: left;
-  padding-bottom: .75em;
+  padding-bottom: 2em;
   z-index: 0;
   position: relative;
 }
@@ -49,7 +49,7 @@ Source: https://paulund.co.uk/create-polaroid-image-with-css
   position: absolute;
   bottom: -10px;
   left: 0;
-  width: 70%;
+  width: 80%;
   padding: 10px;
 
   border: 3px solid transparent;
