--- a/c/dst/test.css
+++ b/c/dst/test.css
@@ -27,9 +27,6 @@ html, body {
   margin-right: -14px;
 }
 
-/*
-Source: https://paulund.co.uk/create-polaroid-image-with-css
-*/
 .pics__row figure {
   text-align: right;
   line-height: .8;
@@ -37,28 +34,27 @@ Source: https://paulund.co.uk/create-polaroid-image-with-css
   background-color: transparent;
   display: inline;
   float: left;
-  padding-bottom: .75em;
+  padding-bottom: 2em;
   z-index: 0;
   position: relative;
 }
 
-.pics__row figure figcaption {
+.pics__row figure a .caption {
   font-family: 'Source Code Pro', monospace;
   color: white;
-  font-size: .85em;
-  position: relative;
-  top: -75px;
-  margin-right: 10px;
-  padding: 10px 10px 3px;
-
-  font-size: 2.05em;
+  font-size: 1.6em;
+  position: absolute;
+  bottom: -10px;
+  left: 0;
   width: 80%;
-  float: left;
+  padding: 10px;
 
-      border-top: 3px solid transparent;
-    border-right: 3px solid transparent;
-          border-left: 5px solid transparent;
-    border-bottom: 5px solid transparent;
+  border: 3px solid transparent;
+}
+
+.pics__row figure a:hover .caption {
+  background-color: hotpink;
+  border-color: white;
 }
 
 /*.pics__row figure a:hover + figcaption {
@@ -66,54 +62,42 @@ Source: https://paulund.co.uk/create-polaroid-image-with-css
 }*/
 
 .pics__row figure {
-
   margin: 0;
   margin-bottom: 0;
-  /* padding: 1em; */
 }
 
 .pics__row figure img {
-  border-top: 3px solid white;
-  border-bottom: 3px solid white;
+  border: 3px solid transparent;
   position: relative;
+}
+
+.pics__row figure a:hover img {
+  border-color: white;
 }
 
 .pics__row figure a {
   position: relative;
+  border: none;
 }
 
-.pics__row figure a::after {
-    content:"";
-    display: block;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    background-color: rgba(12, 46, 56, 0.25);
+.pics__row figure a .overlay {
+  content: "";
+  position: absolute;
+  display: block;
+  height: 100%;
+  width: 100%;
+  top: 0;
+  left: 0;
+  background-color: rgba(12, 46, 56, 0.45);
 }
 
-.pics__row figure a:active {
-    border: 3px solid pink;
-}
-
-.pics__row figure a:hover::after {
-    background-color: transparent;
-}
-
-.pics__row figure a:hover + figcaption {
-    border-top: 3px solid white;
-    border-right: 3px solid white;
-    border-left: 5px solid rgba(12, 46, 56, 1);
-    border-bottom: 5px solid rgba(12, 46, 56, 1);
-
-    background-color: rgba(12, 46, 56, 0.5);
+.pics__row figure a:hover .overlay {
+  background-color: transparent;
 }
 
 /* SCREENS BIGGER THAN 568px (bigger than an iphone) */
 /* ≥ 568px */
 @media screen and (min-width: 35.5em) {
-
   .portfolio-page .content {
     width: 80%;
     margin-left: 10%;
