--- a/c/portfolio.css
+++ b/c/portfolio.css
@@ -1,9 +1,11 @@
 
 html, body {
-
-    background-color: #0C2E38;
+  background-color: #7CC2A5;
 }
 
+figure {
+  margin: 0;
+}
 
 .portfolio-page .content {
   width: 80%;
@@ -12,7 +14,7 @@ html, body {
 }
 
 .subheading {
-  text-align: right;
+  text-align: left;
   border-bottom: 4px solid white;
   margin-bottom: 3em;
 }
@@ -20,7 +22,10 @@ html, body {
 .subheading h2 {
   font-size: 3em;
   margin: 0;
-  margin-bottom: -.3em;
+  margin-bottom: -.25em;
+  margin-left: -.08em;
+  font-weight: 300;
+  text-shadow: 1px -1px #AAAAAA;
 }
 
 /*
@@ -30,26 +35,37 @@ Source: https://paulund.co.uk/create-polaroid-image-with-css
   margin-bottom: 2em;
 }
 
-.pics__row div span {
-  font-family: 'Source Code Pro', monospace;
-  text-align: right;
-  line-height: .8;
-
-  background-color: transparent;
-  display: inline;
-  float: left;
-  padding-bottom: .75em;
-  z-index:0;
-  position:relative;
+.pics__row {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  gap: 1em;
 }
 
-.pics__row div span:after {
-  color: white;
+.pics__row figure {
+  text-align: left;
+}
+
+.pics__row img {
+  border: 4px solid white;
+  border-bottom: none;
+}
+
+.pics__row figcaption {
+  border: 4px solid white;
+  border-top: none;
+  background: white;
+  
+  color: #333;
   font-size: .85em;
-  content: attr(title);
   position: relative;
-  top: .5em;
+  -webkit-box-shadow: 0px 4px 9px -6px #999999;
+  box-shadow: 0px 4px 9px -6px #999999;
 }
+
+.pics__row figcaption > span {
+  display: block;
+}
+/*
 
 .pics__row div span {
   margin-left: .5em;
@@ -58,9 +74,8 @@ Source: https://paulund.co.uk/create-polaroid-image-with-css
 }
 
 .pics__row div span img {
-  border-top: 2px solid white;
-  border-bottom: 2px solid white;
-}
+  border: 2px solid white;
+} */
 
 /* SCREENS BIGGER THAN 568px (bigger than an iphone) */
 /* ≥ 568px */
