--- a/c/portfolio.css
+++ b/c/portfolio.css
@@ -70,12 +70,14 @@ Source: https://paulund.co.uk/create-polaroid-image-with-css
 }
 
 .pics__row figcaption {
+  font-size: .85em;
+  font-weight: 300;
+
   border: 4px solid white;
   border-top: none;
   background: white;
 
   color: #333;
-  font-size: .85em;
   position: relative;
   -webkit-box-shadow: 0px 4px 9px -6px #999999;
   box-shadow: 0px 4px 9px -6px #999999;
